fix: remove payment method selection from booking and fix site identity

--- a/index.html
+++ b/index.html
@@ -4,13 +4,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- TODO: Set the document title to the name of your application -->
-    <title>Booking Buddy</title>
-    <meta name="description" content="Booking Buddy App" />
-    <meta name="author" content="Booking Buddy" />
+    <title>AgendaPetGo | Gestão Inteligente para Pet Shops</title>
+    <meta name="description" content="A plataforma definitiva para agendamentos e gestão do seu Pet Shop." />
+    <meta name="author" content="AgendaPetGo" />
+    <link rel="icon" type="image/png" href="/logo.png" />
 
-    <meta property="og:title" content="Booking Buddy" />
-    <meta property="og:description" content="Booking Buddy App" />
+    <meta property="og:title" content="AgendaPetGo" />
+    <meta property="og:description" content="Gestão e agendamentos para o seu Pet Shop de forma simples e profissional." />
     <meta property="og:type" content="website" />
+    <meta property="og:image" content="/logo.png" />
   </head>
 
   <body>
